<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="all"
    >
    <string name="intentToShenZhenBao01">视珍宝一代</string>
    <string name="intentToShenZhenBao02">视珍宝二代</string>
    <string name="intentToCamera">本地摄像头</string>
    <string name="action_settings">Settings</string>
    <string name="accessibility_service_description">智能安装服务，无需用户的任何操作就可以自动安装程序。</string>
    <string name="mvalm">Detect move</string>
    <string name="audalm">Detect audio</string>
    <string name="mailalm">Detect mail</string>
    <string name="land">Rotate</string>
    <string name="port">Rotate</string>
    <string name="prompt">Tip</string>
    <string name="alarmset">Alarm Set</string>
    <string name="slectType">Choose Mode</string>
    <string name="ipmode">IP Mode</string>
    <string name="p2pmode">P2P Mode</string>
    <string name="loadrecord">Failed to load record files!</string>
    <string name="sd">The SD card not exist!</string>
    <string name="signal">Signal:</string>
    <string name="loadingrecord">Loading record files...</string>
    <string name="loadinginfo">Loading device information...</string>
    <string name="failloadinfo">Failed to load device information...</string>
    <string name="loadingwifi">Loading wifi information...</string>
    <string name="failloadwifi">Failed to load wifi information！</string>
    <string name="reboot">The camera is rebooting，please connect later！</string>
    <string name="wifistart">WIFI Started</string>
    <string name="stamod">STA Mod</string>
    <string name="apmod">AP Mod</string>
    <string name="curlink">Current Link:</string>
    <string name="wifiname">WIFI Name:</string>
    <string name="wifipwd">WIFI Pwd :</string>
    <string name="langset">Language Set</string>
    <string name="pwdwrong1">Password should be 5 or 13 characters or 10 or 26 hexadecimal digits!</string>
    <string name="pwdwrong2">Password should be 8 characters！</string>
    <string name="seted">Successfully Set!</string>
    <string name="searchFinished">Finished Searching</string>
    <string name="searchnotFinished">Please wait while searching！</string>
    <string name="novibrate">NO</string>
    <string name="vibrate">YES</string>
    <string name="nocap">NO</string>
    <string name="cap">YES</string>
    <string name="nosnd">NO</string>
    <string name="snd">YES</string>
    <string name="switch1">Switch1</string>
    <string name="switch2">Switch2</string>
    <string name="switch3">Switch3</string>
    <string name="timerset">Trigger setting</string>
    <string name="style1">Style 1</string>
    <string name="style2">Style 2</string>
    <string name="style3">Style 3</string>
    <string name="success">Successfully Set!</string>
    <string name="failed">Set Failed!</string>
    <string name="whecap">snapshot:</string>
    <string name="whevib">vibration:</string>
    <string name="whesnd">ring:</string>
    <string name="nowifi">Current IP camera does not have WIFI device！</string>
    <string name="INFO_DevName">DevName:</string>
    <string name="INFO_DevModal">DevModal:</string>
    <string name="INFO_SN">SN:</string>
    <string name="INFO_SoftVersion">SoftVersion:</string>
    <string name="DISK_DiskSize">DISK_DiskSize:</string>
    <string name="DISK_FreeSize">DISK_FreeSize:</string>
    <string name="INFO_ethLinkStatus">EthLinkStatus:</string>
    <string name="INFO_upnpStatus">uPnP:</string>
    <string name="INFO_WlanStatus">Wifi-Link Status:</string>
    <string name="INFO_p2pStatus">P2PStatus:</string>
    <string name="NET_DDNSDomain">NET_DDNS:</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="devinfo">Device Information</string>
    <string name="pixset">Pixel Setting</string>
    <string name="almset">Alarm Settings</string>
    <string name="alarm">Alarming</string>
    <string name="wifiset">WIFI Setting</string>
    <string name="wait">Please wait...</string>
    <string name="loadingImg">Loading……</string>
    <string name="realvid">Real Time Video</string>
    <string name="recordvid">Record Video</string>
    <string name="cameraset">Camera Settings</string>
    <string name="imgshow_title">View Alarm Pictures</string>
    <string name="imgshow_filename">Pic Name：</string>
    <string name="alarmImgDescription">Alarm Pic</string>
    <string name="showInZoomMode">Show In Zoom Mode</string>
    <string name="dialog_title_clearImg">Clear current images</string>
    <string name="dialog_message_clearImg">Are you sure to clear current images？</string>
    <string name="progress_title">Please wait</string>
    <string name="progress_message_clearImg">Clearing images……</string>
    <string name="menu_clearImg">Clear current images</string>
    <string name="imglist_title">Alarm Pic List</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="devlist">Dev List</string>
    <string name="cameraname">Camera Name</string>
    <string name="cameraip">Camera Ip</string>
    <string name="dataport">Data Port</string>
    <string name="httpport">Web Port</string>
    <string name="camerauid">Camera UID</string>
    <string name="camerauidpsd">UID PSD</string>
    <string name="usr">User Name</string>
    <string name="pwd">Pass Word</string>
    <string name="change">Change</string>
    <string name="scan">Scan</string>
    <string name="cancel">取消</string>
    <string name="delete">Delete</string>
    <string name="video">Real Time Video</string>
    <string name="recordvideo">Record Video</string>
    <string name="susrecord">Record video successful！</string>
    <string name="begrecord">Begin recording video！</string>
    <string name="fun">Functicon</string>
    <string name="instructions">Instructions</string>
    <string name="suscapture">Capture picture successful!</string>
    <string name="help_dialog_text">Record file is in /sdcard/record，capture picture is in /sdcard/alarm when alarm,the phone will vibrate.</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_web_search">confirm information</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_format">format</string>
    <string name="msg_default_meta">source data</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Set the two-dimensional code in the frame</string>
    <string name="msg_default_time">time</string>
    <string name="msg_default_type">type</string>
    <string name="msg_google_shopper_missing">谷歌购物未安装</string>
    <string name="msg_install_google_shopper">谷歌购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_reverse_image_summary">设备上启用了前置摄像头只</string>
    <string name="preferences_reverse_image_title">反转摄像机的图像</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_search_country">搜索国家</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_text">找到纯文本</string>
    <string name="zxing_url">http://code.google.com/p/zxing</string>
    <string name="usepreset">Preset Use</string>
    <string name="setpreset">Perset Set</string>
    <string name="clearpreset">Perset Clear</string>
    <string name="stereo">Press the right mic for talking,and release for listening!</string>
    <string name="choose">Please choose camera before checking video!</string>
    <string name="SSID">SSID:</string>
    <string name="Password">Password:</string>
    <string name="Start">SmartConfig</string>
    <string name="SmartConfiging">SmartConfiging...</string>
    <string name="SmartConfigOver">Configuration finish</string>
    <string name="showpsd">Show Password</string>
    <string name="sure">确定</string>
    <string name="hello_world">hello_world</string>
    <string name="title_activity_new_or_old_case">NewOrOldCaseActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">佳婷慧报告1.1</string>
    <string name="bt_login_permission">请授权相应的权限</string>
    <string name="bt_dialog_show">正在登录...</string>
    <string name="login_error_show">账号或者密码错误，请重新输入</string>
    <string name="user_name">帐户名称:</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="user_password">账户密码:</string>
    <string name="user_password_hint">请输入用户密码</string>
    <string name="user_password_memory">记住密码</string>
    <string name="no_user_account">没有账号？</string>
    <string name="user_register">注册</string>
    <string name="login">登录</string>
    <string name="user_register_message_error">注册信息不能为空</string>
    <string name="user_register_success">注册成功，请登录</string>
    <string name="user_register_password_error">密码不少于6位</string>
    <string name="user_register_email_error">请输入正确的邮箱地址</string>
    <string name="user_register_faild_password">注册失败，密码不一致</string>
    <string name="user_register_faild_account">注册失败，该用户名已经被注册</string>
    <string name="quit_program">再按一次退出程序</string>
    <string name="user_password_registration_hint">请输入密码（密码最少6位）</string>
    <string name="user_password_again">确认密码:</string>
    <string name="user_password_again_hint">请再次输入密码</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="patient_id">编号</string>
    <string name="patient_name">姓名</string>
    <string name="patient_telephone">电话号码</string>
    <string name="patient_age">年龄</string>
    <string name="patient_marriage">婚否</string>
    <string name="patient_source">病人来源</string>
    <string name="patient_register">登记</string>
    <string name="patient_return">返回</string>
    <string name="patient_menu">菜单</string>
    <string name="patient_show_delete">删除</string>
    <string name="setting_server_ip">服  务  器  IP</string>
    <string name="setting_server_ip_hint">请输入FTP服务器的IP</string>
    <string name="setting_server_port">服务器端口号</string>
    <string name="setting_server_port_hint">请输入FTP服务器的端口号</string>
    <string name="setting_server_name">用    户     名</string>
    <string name="setting_server_name_hint">请输入FTP服务器的用户名</string>
    <string name="setting_server_password">密             码</string>
    <string name="setting_server_password_hint">请输入FTP服务器的用户密码</string>
</resources>