<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:checked="true"
                android:text="@string/whevib"
                android:textAllCaps="false" />

            <ToggleButton
                android:id="@+id/tg11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textOff="@string/novibrate"
                android:textOn="@string/vibrate" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginTop="5px"
            android:background="#111111" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:text="@string/whesnd"
                android:textAllCaps="false" />

            <ToggleButton
                android:id="@+id/tg22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textOff="@string/nosnd"
                android:textOn="@string/snd" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginTop="5px"
            android:background="#111111" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:text="@string/whecap"
                android:textAllCaps="false" />

            <ToggleButton
                android:id="@+id/tg33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textOff="@string/nocap"
                android:textOn="@string/cap" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hide"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6px"
                android:text="@string/mvalm"
                android:textAllCaps="false" />

            <ToggleButton
                android:id="@+id/tg44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:textAllCaps="false"
                android:textOff="@string/close"
                android:textOn="@string/open" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6px"
                android:text="@string/audalm"
                android:textAllCaps="false" />

            <ToggleButton
                android:id="@+id/tg55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:textAllCaps="false"
                android:textOff="@string/close"
                android:textOn="@string/open" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6px"
                android:text="@string/mailalm"
                android:textAllCaps="false" />

            <ToggleButton
                android:id="@+id/tg66"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:textAllCaps="false"
                android:textOff="@string/close"
                android:textOn="@string/open" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>