<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_45"
    android:background="@drawable/title_shape"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/patient_register"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="@dimen/dp_22"

        />

    <Button
        android:id="@+id/btn_left"
        android:layout_width="@dimen/dp_85"
        android:layout_height="@dimen/dp_45"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@drawable/btn_bg"
        android:padding="@dimen/dp_0_5"
        android:text="@string/patient_return"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="@dimen/dp_20"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_right"
        android:layout_width="@dimen/dp_85"
        android:layout_height="@dimen/dp_45"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/btn_bg"
        android:text="@string/patient_menu"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="@dimen/dp_20" />

</RelativeLayout>